# catflow-inference

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: catflow-inference.yml
catflow_inference/: main.py
example/: motion.py  predict.sh  predict_draw.py
tests/: test_integration.py  test_unit.py
